<resources>
    <string name="app_name">Bright Light</string>
    <string name="please"></string>
    <string name="load_fail">加载失败</string>
    <string name="post_success">发布成功</string>
    <string name="post_fail">发布失败</string>
    <string name="nothing">什么也没有...</string>
    <string name="enter_keyword_first">请先输入关键字</string>
    <string name="please_select_at_least_one_picture">请至少选择一张图片</string>
    <string name="company_information">公司信息</string>
    <string name="project_introduction">项目简介</string>
    <string name="investment_amounts">投资额度</string>
    <string name="industry">所属行业</string>
    <string name="location">位置</string>
    <string name="passwords_not_math">两次输入密码不一致</string>
    <string name="register_successfully">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="login_successfully">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="modify_successfully">修改成功</string>
    <string name="modify_failed">修改失败</string>
    <string name="delete_successfully">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="send_successfully">发送成功</string>
    <string name="send_failed">发送失败</string>
    <string name="enter_complete">请输入完整信息</string>
    <string name="years_old">岁</string>
    <string name="personal_information">个人信息</string>
    <string name="avatar">头像</string>
    <string name="birthday">生日</string>
    <string name="loading">加载中...</string>
    <string name="load_more">上拉加载</string>
    <string name="refresh">下拉刷新</string>
    <string name="choose_sex">请选择性别</string>
    <string name="choose_birthday">请选择出生年月</string>
    <string name="enter_self_introduction">请输入个人介绍</string>
    <string name="choose_working_experience">请选择工作经验</string>
    <string name="please_choose_avatar">请选择头像</string>
    <string name="expected_job">期望职位:</string>
    <string name="job">工作</string>
    <string name="enter_the_job">请输入招聘的职位</string>
    <string name="enter_monthly_salary">请输入月薪</string>
    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="all_photos">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>
    <string name="accomplish">完成</string>
    <string name="photo_unit">张</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="select_image">选择图片</string>
    <string name="camera_not_working">相机无法正常使用</string>
    <string name="image_error">图片错误</string>
    <string name="sure">确定</string>
    <string name="login">登录</string>
    <string name="language">语言</string>
    <string name="sign_in">注册</string>
    <string name="enter_phone_no.">请输入手机号</string>
    <string name="enter_sent_code">请输入验证码</string>
    <string name="click_to_send_code">获取验证码</string>
    <string name="enter_password">请输入密码</string>
    <string name="confirm_password_6_22_digit_or_alphabet">请输入密码(6-22位数字或字母)</string>
    <string name="enter_password_6_22_digit_or_alphabet">请输入密码(6-22位数字或字母)</string>
    <string name="confirm_password">请再次输入密码</string>
    <string name="passwrod_6_22">密码应为6-22数字或字母</string>
    <string name="verification_incorrect">验证码错误</string>
    <string name="registration_confirmed">注册</string>
    <string name="rental_services">租房</string>
    <string name="second_hand_goods">二手</string>
    <string name="recruitment">招聘</string>
    <string name="job_wanted">求职</string>
    <string name="business_services">商务服务</string>
    <string name="forget_password">忘记密码</string>
    <string name="please_enter_the_company_name">请输入公司名称</string>
    <string name="enter_phone_number">请输入联系电话</string>
    <string name="contact_number">联系电话</string>
    <string name="company_name">公司名称</string>
    <string name="acquire">获取</string>
    <string name="enter_your_target_positions">请输入你的目标职位</string>
    <string name="my_release">我的发布</string>
    <string name="job_intension">求职意向:</string>
    <string name="goods_detail">物品详情</string>
    <string name="Please_select_a_type">请选择类型</string>
    <string name="job_require">简单介绍下工作的内容及对应聘者的要求</string>
    <string name="about_us">关于我们</string>
    <string name="contant_us">联系我们</string>
    <string name="contant_us1">联系我们:</string>
    <string name="job_requirements">职位要求</string>
    <string name="job_information">求职信息</string>
    <string name="recruitment_information">招聘信息</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="choose_from_your_phone_album">从手机相册选择</string>
    <string name="choose_photos">拍照选择</string>
    <string name="under_development">功能正在开发  敬请期待</string>
    <string name="working_experience">工作经验</string>
    <string name="unlimited">不限</string>
    <string name="recent_graduate">应届生</string>
    <string name="one_year_below">1年以内</string>
    <string name="one_to_three_years">1-3年</string>
    <string name="three_to_five_years">3-5年</string>
    <string name="five_to_ten_years">5-10年</string>
    <string name="ten_years_and_above">10年以上</string>
    <string name="title_please_enter_your_topic">标题</string>
    <string name="topic">标题</string>
    <string name="please_choose_the_type_of_hoose_e.g._one_bedroom">请输入户型</string>
    <string name="enter_the_size_of_house_in_square_metres">请输入面积(sqm)</string>
    <string name="enter_the_exact_location">请输入位置</string>
    <string name="mothly_rent">请输入租金</string>
    <string name="phone_number">电话</string>
    <string name="describe_in_words_about_other_details_of_your_house">描述一下房子的概况</string>
    <string name="enter_your_category">请选择类别</string>
    <string name="enter_your_title">请输入标题</string>
    <string name="please_describe">请描述</string>
    <string name="enter_personal_contacts">输入联系人</string>
    <string name="dessribe_your_product">一句话描述下你的物品吧！</string>
    <string name="describe_in_details_about_your_product">描述一下物品的细节</string>
    <string name="enter_your_selling_price">输入价格</string>
    <string name="send">保存并发布</string>
    <string name="others">其他</string>
    <string name="job_position">发布职位</string>
    <string name="sales_persons">销售代表</string>
    <string name="monthly_salary">月               薪</string>
    <string name="negotiable">面议</string>
    <string name="description_of_job_vacancy">职位描述</string>
    <string name="job_recruitment">招聘求职</string>
    <string name="job_search">我要求职</string>
    <string name="job_recroitment">我要招聘</string>
    <string name="animal_and_plants_growing">动植物种苗</string>
    <string name="crops">农作物</string>
    <string name="livestock_and_poultry">畜禽养殖</string>
    <string name="agricultvral_machinery">农机设备</string>
    <string name="pesticides_and_fertilizer">农药肥料</string>
    <string name="all_infornation">不限</string>
    <string name="more">更多</string>
    <string name="cleaning_service">保洁</string>
    <string name="moving_service">搬家</string>
    <string name="repairing_services">维修</string>
    <string name="recycle_items">回收</string>
    <string name="log_out">退出登录</string>
    <string name="projects_for_fund">项目找资金</string>
    <string name="funds_for_projects">资金找项目</string>
    <string name="post">发布</string>
    <string name="details">详情</string>
    <string name="projects_details">项目详情</string>
    <string name="funds_details">资金详情</string>
    <string name="news_details">新闻详情</string>
    <string name="news">新闻中心</string>
    <string name="personal">个人中心</string>
    <string name="enter_your_nick_name">请输入昵称</string>
    <string name="nick_name">昵称</string>
    <string name="change_personal_details">修改昵称</string>
    <string name="receiver_address">我的收货地址</string>
    <string name="my_post_history">我发布的信息</string>
    <string name="request_a_taxi">申请成为车主</string>
    <string name="my_wellet">我的钱包</string>
    <string name="disscoont_point">我的积分</string>
    <string name="confirm">保存</string>
    <string name="cancel">取消</string>
    <string name="farm_products">农林牧</string>
    <string name="category">类别</string>
    <string name="uploding">加载中</string>
    <string name="domestic_services">生活服务</string>
    <string name="car_poll">叫车</string>
    <string name="shop_online">商城</string>
    <string name="reset_password">重置密码</string>
    <string name="new_password">密码</string>
    <string name="enter">提交</string>
    <string name="please_enter_real_name">请输入收获人的真实姓名</string>
    <string name="please_enter">请输入</string>
    <string name="edit_the_prceiver_address">编辑收获地址</string>
    <string name="choose_photo">选择照片</string>
    <string name="your_photo_callery">所有相册</string>
    <string name="receiver">收获人</string>
    <string name="phone_no.">手机</string>
    <string name="enter_your_area_address">所在地区</string>
    <string name="street_address">详细地址</string>
    <string name="information_center">新闻中心</string>
    <string name="find_friends">交友</string>
    <string name="invite_to_chat">聊天</string>
    <string name="house_details">房屋详情</string>
    <string name="password_recovery">找回密码</string>
    <string name="next">下一步</string>
    <string name="same_city">同城</string>
    <string name="enter_your_prrsonal_resome_below">在下方输入你的个人简历</string>
    <string name="job_description">职位详情</string>
    <string name="resome">简历</string>
    <string name="farm_product">农林牧</string>
    <string name="recever_address">我的收获地址</string>
    <string name="prefffered_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="edit_your_resume">编辑简历</string>
    <string name="resume_details">简历详情</string>
    <string name="take_photo">你的照片</string>
    <string name="enter_your_name">输入姓名</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_enter_your_job_description">请输入求职意向</string>
    <string name="please_enter_your_phone_no.">请输入你的手机号</string>
    <string name="date_of_birth_year">出生年份</string>
    <string name="personal_introduction">个人介绍</string>
    <string name="choose_the_year_of_birth">选择你的出生日期</string>
    <string name="choose_the_year_of_work">选择你的工作时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="Completed">已完成</string>
    <string name="ksh">:</string>
    <string name="search">搜索</string>
    <string name="enter_your_keyword">请输入关键字</string>
    <string name="call">拨号</string>
    <string name="job_application">我要求职</string>
    <string name="workers_recruitment">我要招聘</string>
    <string name="car_washer">洗车工</string>
    <string name="dish_washer">洗碗工</string>
    <string name="waiterss">服务员</string>
    <string name="off_loader">装卸工</string>
    <string name="seourity_guard">物业保安</string>
    <string name="receiptionist">大堂经理</string>
    <string name="fersonal_driver">专车司机</string>
    <string name="service_details"> 服务详情</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">综合</string>
    <string name="national">国家</string>
    <string name="opinion">观点</string>
    <string name="letters">投稿</string>
    <string name="county">县市</string>
    <string name="classified">广告</string>
    <string name="Please_select">请选择</string>
    <string name="bridal_chamber">新房</string>
    <string name="second_hand_house">二手房</string>
    <string name="Room_1">1室</string>
    <string name="Room_1_Hall">1室1厅</string>
    <string name="Room_1_Hall_2">2室1厅</string>
    <string name="Room_2_Hall_2">2室2厅</string>
    <string name="Room_1_Hall_3">3室1厅</string>
    <string name="Room_2_Hall_3">3室2厅</string>
    <string name="Room_1_Hall_4">4室1厅</string>
    <string name="Unlimited">不限</string>
    <string name="Office_Building">写字楼</string>
    <string name="factory_mill">厂房</string>
    <string name="residence">住宅</string>
    <string name="Door_model">户型</string>
</resources>