<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/house_choose"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/base_bg"
        android:gravity="center"
        android:maxLength="35"
        android:text="@string/Please_select"
        android:textColor="@color/textBlack1"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line1" />

    <TextView
        android:id="@+id/house_dialog_house"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/white"
        android:gravity="center"
        android:maxLength="35"
        android:text="@string/residence"
        android:textColor="@color/textBlack1"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line1" />

    <TextView
        android:id="@+id/house_dialog_office_building"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/white"
        android:gravity="center"
        android:maxLength="35"
        android:text="@string/Office_Building"
        android:textColor="@color/textBlack1"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/line1" />

    <TextView
        android:id="@+id/house_dialog_workshop"
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:background="@color/white"
        android:gravity="center"
        android:maxLength="35"
        android:text="@string/factory_mill"
        android:textColor="@color/textBlack1"
        android:textSize="14sp" />
</com.zhy.autolayout.AutoLinearLayout>
