<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <com.example.administrator.kenya.view.MyRadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="25px"
                android:paddingRight="30px">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Unlimited"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_1"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_1_Hall"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_1_Hall_2"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />
            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="25px"
                android:paddingRight="30px">

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_2_Hall_2"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />


                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_1_Hall_3"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_2_Hall_3"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButton8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30px"
                    android:layout_weight="1"
                    android:background="@drawable/popup_bg"
                    android:button="@null"
                    android:gravity="center"
                    android:minHeight="78px"
                    android:text="@string/Room_1_Hall_4"
                    android:textColor="@drawable/popup_textcolor"
                    android:textSize="13sp" />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.example.administrator.kenya.view.MyRadioGroup>
</com.zhy.autolayout.AutoLinearLayout>